// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET schedule by destination should return 2 departures from chatelet+les+halles to cergy+le+haut 1`] = `
Array [
  Object {
    "departureTime": "2020-03-10T09:24:00+01:00",
    "displayAttributes": "09:24",
    "displayDestination": "Cergy-Le-Haut",
    "mission": "UPAC",
    "trainCode": "0924",
  },
  Object {
    "departureTime": "2020-03-10T09:29:00+01:00",
    "displayAttributes": "09:29",
    "displayDestination": "Cergy-Le-Haut",
    "mission": "UPAC",
    "trainCode": "0929",
  },
  Object {
    "departureTime": "2020-03-10T09:55:00+01:00",
    "displayAttributes": "09:55",
    "displayDestination": "Cergy-le-haut",
    "mission": "UHZZ",
    "trainCode": "0955",
  },
]
`;

exports[`GET schedule by destination should return 5 departures from chatelet+les+halles to maisons+laffitte 1`] = `
Array [
  Object {
    "departureTime": "2020-03-10T09:24:00+01:00",
    "displayAttributes": "09:24",
    "displayDestination": "Cergy-Le-Haut",
    "mission": "UPAC",
    "trainCode": "0924",
  },
  Object {
    "departureTime": "2020-03-10T09:29:00+01:00",
    "displayAttributes": "09:29",
    "displayDestination": "Cergy-Le-Haut",
    "mission": "UPAC",
    "trainCode": "0929",
  },
  Object {
    "departureTime": "2020-03-10T09:37:00+01:00",
    "displayAttributes": "09:37",
    "displayDestination": "Poissy",
    "mission": "TEDI",
    "trainCode": "0937",
  },
  Object {
    "departureTime": "2020-03-10T19:12:00+01:00",
    "displayAttributes": "19:12",
    "displayDestination": "Poissy",
    "mission": "TEDI",
    "trainCode": "1912",
  },
  Object {
    "departureTime": "2020-03-11T00:15:00+01:00",
    "displayAttributes": "00:15",
    "displayDestination": "Poissy",
    "mission": "TEDI",
    "trainCode": "2415",
  },
  Object {
    "departureTime": "2020-03-10T09:55:00+01:00",
    "displayAttributes": "09:55",
    "displayDestination": "Cergy-le-haut",
    "mission": "UHZZ",
    "trainCode": "0955",
  },
]
`;
